# insynic

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md  README_CN.md  RELEASE_NOTES.md  RELEASE_NOTES_EN.md  insynic.icns
insynic/: CMakeLists.txt  Info.plist.in
insynic/src/: test_menu.cpp
insynic/src/controlpanel/: insynic_draggablekey.cpp  insynic_keyconfigdialog.cpp  insynic_keyconfigdialog.h  insynic_profilemanager.cpp  insynic_profilemanager.h  insynic_virtualkey.h
insynic/src/filemanager/: insynic_filemanager.cpp
insynic/src/scrcpy_lib/: insynic_scrcpy.c  insynic_scrcpy.h
insynic/src/ui/: CMakeLists.txt  insynic_customtranslator.h  insynic_filebrowser.cpp  insynic_mainwindow.cpp  insynic_mainwindow.h  insynic_networkdialog.h  macos_menu.mm  qt_nsview.mm
insynic/translations/: insynic_zh.ts
src/: main.cpp
src/controlpanel/: CMakeLists.txt  insynic_controlpanel.cpp  insynic_controlpanel.h  insynic_devicesettingsprofile.cpp  insynic_devicesettingsprofile.h  insynic_draggablekey.cpp  insynic_draggablekey.h  insynic_keyconfigdialog.cpp  insynic_keyconfigdialog.h  insynic_profilemanager.cpp  insynic_saveprofiledialog.cpp  insynic_saveprofiledialog.h  insynic_virtualkey.h
src/filemanager/: CMakeLists.txt  insynic_filemanager.cpp  insynic_filemanager.h
src/scrcpy_lib/: CMakeLists.txt  config.h  insynic_macos_window.m  insynic_scrcpy.c  insynic_scrcpy.h
src/ui/: CMakeLists.txt  insynic_controlbar.cpp  insynic_controlbar.h  insynic_customtranslator.cpp  insynic_devicecontrol.cpp  insynic_devicecontrol.h  insynic_devicesession.cpp  insynic_devicesession.h  insynic_devicewindow.cpp  insynic_devicewindow.h  insynic_filebrowser.cpp  insynic_filebrowser.h  insynic_mainwindow.cpp  insynic_mainwindow.h  insynic_networkdialog.cpp  insynic_recorddialog.cpp  insynic_recorddialog.h  insynic_settingsdialog.cpp  insynic_settingsdialog.h  insynic_sidepanel.cpp  insynic_sidepanel.h  qt_nsview.h
translations/: insynic_zh.ts
